add feedservice
