# APIGateWay/internal/server/server.go
@@ -1,26 +1,28 @@
 package server
 
 import (
-	"github.com/gofiber/fiber/v2"
 	"Project/APIGateWay/internal/handlers"
 	"Project/APIGateWay/internal/service"
-	"github.com/arsmn/fiber-swagger/v2"
+
+    "github.com/arsmn/fiber-swagger/v2"
+	"github.com/gofiber/fiber/v2"
 )
 
 type Server struct {
 	app *fiber.App
 }
 
-func NewServer(authService *service.AuthService) *Server {
+func NewServer(authService *service.AuthService, feedService *service.FeedService) *Server {
 	app := fiber.New()
 
 	app.Static("/", "/app")
 
 	app.Get("/swagger/*", swagger.New(swagger.Config{
-		URL:"/swagger.yaml",
+		URL: "/swagger.yaml",
 	}))
-	
+
 	authHandlers := handlers.NewAuthHandlers(authService)
+	feedHandlers := handlers.NewFeedHandlers(feedService)
 
 	app.Post("/register", authHandlers.Register)
 	app.Post("/login", authHandlers.Login)
@@ -28,6 +30,9 @@ func NewServer(authService *service.AuthService) *Server {
 	app.Post("/refresh", authHandlers.Refresh)
 	app.Get("/me", authHandlers.Me)
 	app.Post("/confirm-email", authHandlers.ConfirmEmail)
+
+	app.Post("/posts", feedHandlers.CreatePost)
+	app.Get("/posts/all", feedHandlers.GetAllPosts)
 
 	return &Server{
 		app: app,
