# APIGateWay/swagger.yaml
@@ -119,6 +119,55 @@ paths:
           description: Invalid request body
         '404':
           description: Confirmation code not found
+  /posts:
+    post:
+      summary: Create a new post
+      description: Create a new post with content and image URL
+      security:
+        - BearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePostRequest'
+      responses:
+        '201':
+          description: Post created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '400':
+          description: Invalid request body
+        '401':
+          description: Unauthorized
+  /posts/all:
+    get:
+      summary: Get all posts
+      description: Retrieve a list of all posts with pagination
+      parameters:
+        - name: page
+          in: query
+          description: Page number (default is 1)
+          required: false
+          schema:
+            type: integer
+            default: 1
+        - name: pageSize
+          in: query
+          description: Number of posts per page (default is 10)
+          required: false
+          schema:
+            type: integer
+            default: 10
+      responses:
+        '200':
+          description: List of posts retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostsResponse'
 components:
   schemas:
     RegisterRequest:
@@ -183,8 +232,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
         email:
           type: string
           format: email
@@ -198,6 +246,46 @@ components:
           type: string
       required:
         - code
+    CreatePostRequest:
+      type: object
+      properties:
+        content:
+          type: string
+        image_url:
+          type: string
+      required:
+        - content
+    Post:
+      type: object
+      properties:
+        id:
+          type: string
+        user_id:
+          type: string
+        content:
+          type: string
+        image_url:
+          type: string
+        created_at:
+          type: string
+          format: date-time
+      required:
+        - id
+        - user_id
+        - content
+        - created_at
+    PostsResponse:
+      type: object
+      properties:
+        posts:
+          type: array
+          items:
+            $ref: '#/components/schemas/Post'
+        total_posts:
+          type: integer
+      required:
+        - posts
+        - total_posts
   securitySchemes:
     BearerAuth:
       type: http
